kubernetes/apps/sobok/web/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app.kubernetes.io/name: web
  ports:
    - name: http
      port: 3000
      targetPort: http
